<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0C3F1"
    tools:context=".StudentloginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="321dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iitindore_logo_circle"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#AB1D79"
        android:fontFamily="@font/abeezee"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etloginpassword" />

    <TextView
        android:id="@+id/tv_student_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/student_login"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etloginemail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="#4E2780"
        android:backgroundTint="#4E2780"
        android:ems="10"
        android:fontFamily="@font/scope_one"
        android:hint="@string/user_id"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_login"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etloginpassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="#4E2780"
        android:ems="10"
        android:fontFamily="@font/scope_one"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etloginemail" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="79dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin">

        <TextView
            android:id="@+id/tv_dont_have_an_account_yet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/scope_one"
            android:text="@string/don_t_have_an_account_yet2"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvregister"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/scope_one"
            android:text="@string/register2"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>