<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0C3F1"
    tools:context=".DriverregisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="321dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iitindore_logo_circle" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#AB1D79"
        android:fontFamily="@font/abeezee"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etpassword" />

    <TextView
        android:id="@+id/tv_driver_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/driver_register"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="#4E2780"
        android:ems="10"
        android:fontFamily="@font/scope_one"
        android:hint="@string/user_id3"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_driver_login"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@color/purple"
        android:backgroundTint="#4E2780"
        android:ems="10"
        android:fontFamily="@font/scope_one"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemail" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="79dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregister">

        <TextView
            android:id="@+id/tv_already_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/scope_one"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvlogin"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/scope_one"
            android:text="@string/login2"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>